# EpochScript

./: .gitignore  06_PORTFOLIO_OPTIMIZATION.md  CMakeLists.txt  HIGHER_ORDER_SYSTEM.md  PENDING_TEST_CASE.md  vcpkg.json
cmake/: EpochDataSDK.cmake  (+1 more)
src/transforms/compiler/: CMakeLists.txt  ast_compiler.cpp  compilation_context.h  constructor_parser.cpp  constructor_parser.h  cse_optimizer.cpp  expression_compiler.cpp  expression_compiler.h  node_builder.cpp  node_builder.h  scalar_inlining_pass.cpp  scalar_inlining_pass.h  timeframe_resolver.cpp  type_checker.cpp  type_checker.h
src/transforms/compiler/error_formatting/: argument_error.cpp  argument_error.h  type_error.cpp  type_error.h
src/transforms/compiler/parser/: python_parser.cpp
src/transforms/compiler/validators/: boolean_select_validator.cpp  conditional_select_validator.cpp  special_node_validator.h
src/transforms/components/: CMakeLists.txt  data_source.h  registration.cpp
src/transforms/components/aggregation/: CMakeLists.txt  agg.h  agg_metadata.h  register.h
src/transforms/components/calendar/: register.h
src/transforms/components/cross_sectional/: cross_sectional_metadata.h  cs_winsorize.h  rank.h  register.h
src/transforms/components/cummulative/: cum_op.h  register.h
src/transforms/components/data_sources/: data_category_mapper.cpp  dividends_metadata.h  fred_metadata.h  fred_transform.h  metadata_helper.h  news_metadata.h  parametric_data_source.h  polygon_data_source.h  polygon_indices_metadata.h  polygon_metadata.h  reference_crypto_metadata.h  reference_fx_metadata.h  reference_indices_metadata.h  reference_stocks_metadata.h  register.h  sec_metadata.h  short_interest_metadata.h  short_volume_metadata.h  splits_metadata.h  ticker_events_metadata.h
src/transforms/components/datetime/: datetime_diff.h  register.h
src/transforms/components/hosseinmoein/: common_utils.h  register.h
src/transforms/components/indicators/: ffill.h  indicators_metadata.h  moving_average.cpp  register.h
src/transforms/components/ml/: IMPLEMENTATION_SUMMARY.md  liblinear_base.h  liblinear_metadata.h  lightgbm.h  lightgbm_base.h  lightgbm_metadata.h  linear_model.h  ml_preprocess.h  ml_preprocess_metadata.h  ml_split_utils.h  register.h  rolling_dbscan.h  rolling_gmm.h  rolling_hmm.h  rolling_ica.h  rolling_kmeans.h  rolling_lightgbm.h  rolling_linear_model.h  rolling_ml_base.h  rolling_ml_metadata.h  rolling_ml_preprocess.h  rolling_pca.h  rolling_transforms_metadata.h  rolling_window_iterator.h  sagemaker_sentiment.cpp  sagemaker_sentiment.h  sagemaker_sentiment_metadata.h
src/transforms/components/operators/: alias.h  alias_metadata.h  controlflow_metadata.h  register.h  select.cpp  select.h  static_cast_metadata.h
src/transforms/components/portfolio/: portfolio_metadata.h  register.h
src/transforms/components/price_actions/: register.h
src/transforms/components/reports/: CMakeLists.txt  bar_chart_report.cpp  bar_chart_report.h  base_card_report.cpp  base_card_report.h  cs_bar_chart_report.cpp  cs_bar_chart_report.h  cs_numeric_card_report.cpp  cs_numeric_card_report.h  cs_table_report.cpp  cs_table_report.h  gap_report.cpp  gap_report.h  histogram_chart_report.cpp  histogram_chart_report.h  nested_pie_chart_report.cpp  nested_pie_chart_report.h  pie_chart_report.cpp  pie_chart_report.h  table_report.cpp  table_report.h
src/transforms/components/statistics/: arma_tensor.h  clustering_metadata.h  dataframe_armadillo_utils.h  dbscan.h  gmm.h  gmm_metadata.h  hmm.h  ica.h  kmeans.h  pca.h  register.h  winsorize.h
src/transforms/components/string/: register.h
src/transforms/components/timeseries/: CMakeLists.txt  EXTENSION_PLAN.md  register.h  timeseries_metadata.h
src/transforms/components/tulip/: register.h  tulip_metadata.h
src/transforms/components/utility/: asset_ref_passthrough.h  asset_ref_passthrough_metadata.h  register.h
src/transforms/components/volatility/: register.h
test/: CMakeLists.txt  epoch_test_runner.cpp
test/integration/common/: coverage_tracker.cpp
test/integration/mocks/: mock_transform.h  mock_transform_manager.h
test/unit/chart_metadata/: axis_manager_test.cpp  data_column_resolver_test.cpp  plot_kind_registry_test.cpp  series_configuration_builder_test.cpp
test/unit/common/: flow_graph_tester.hpp  flow_source_tester.cpp
test/unit/compiler/: CMakeLists.txt  any_type_resolution_test.cpp  ast_compiler_test.cpp  boolean_select_validation_test.cpp  boolean_type_cast_test.cpp  cse_optimizer_test.cpp  python_boolean_operators_test.cpp  scalar_inlining_pass_test.cpp  slot_kwargs_test.cpp  test_intraday_only_default.cpp  test_scalar_timeframe_resolution.cpp  test_timeframe_validation.cpp  timestamp_type_resolution_test.cpp
test/unit/core/: CMakeLists.txt  constant_value_test.cpp
test/unit/data/: auxiliary_category_detection_test.cpp  factory_test.cpp
test/unit/data/database/: database_impl_test.cpp  database_test.cpp  mocks.h  resampler_test.cpp
test/unit/event_markers/: event_marker_test.cpp
test/unit/investigation/: bar_chart_null_test.cpp  duplicate_timestamp_detection_test.cpp
test/unit/runtime/: CMakeLists.txt  fake_data_sources.h  ml_strategy_test.cpp  orchestrator_basic_all_datasource.cpp  orchestrator_cross_sectional.cpp  orchestrator_error_handling_test.cpp  orchestrator_event_marker_caching_test.cpp  orchestrator_graph_topologies_real_test.cpp  orchestrator_ml_integration_test.cpp  orchestrator_parallel_execution_test.cpp  orchestrator_report_caching_test.cpp  orchestrator_report_generation_test.cpp  pairs_trading_test.cpp  runtime_test_utils.h
test/unit/runtime/events/: cancellation_token_test.cpp  event_dispatcher_test.cpp  event_filter_test.cpp  orchestrator_event_bridge_test.cpp  orchestrator_events_integration_test.cpp  transform_progress_emitter_test.cpp
test/unit/strategy/: CMakeLists.txt  algorithm_node_literal_inputs_test.cpp
test/unit/transforms/: CMakeLists.txt  flag_schema_validation_test.cpp  template_expansion_test.cpp  trade_executor_test.cpp  transform_metadata_factory.cpp  transforms_test.cpp  typed_transforms_test.cpp
(+347 files in other folders)
