target_sources(epoch_script PRIVATE registration.cpp)


add_subdirectory(aggregation)
add_subdirectory(calendar)
add_subdirectory(cummulative)
add_subdirectory(data_sources)
add_subdirectory(hosseinmoein)
add_subdirectory(indicators)
add_subdirectory(ml)
add_subdirectory(operators)
add_subdirectory(price_actions)
add_subdirectory(reports)
add_subdirectory(statistics)
add_subdirectory(string)
add_subdirectory(tulip)
add_subdirectory(timeseries)
add_subdirectory(volatility)
